--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,93 @@
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
-html{
-    font-size: 62.5%;
+:root {
+  --header-bgc: #10375c;
+}
+html {
+  font-size: 62.5%;
 }
 body {
-    font-size: 1.6rem;
-    font-family: "Sora", sans-serif;
+  font-size: 1.6rem;
+  font-family: "Sora", sans-serif;
+}
+
+/* common */
+.container {
+  width: 1170px;
+  margin: 0 auto;
+  max-width: calc(100% - 48px);
+}
+a {
+  text-decoration: none;
+}
+.btn {
+  display: inline-block;
+  flex-shrink: 0;
+  min-width: 205px;
+  line-height: 60px;
+  border-radius: 30px;
+  background: #2e80ce;
+  color: #fff;
+  text-align: center;
+  font-size: 1.8rem;
+  font-style: normal;
+  font-weight: 400;
+}
+.btn:hover{
+    opacity: 0.9;
+}
+/* header */
+
+.header {
+  padding-top: 30px;
+  background: var(--header-bgc);
+  min-height: 100vh;
+}
+.header-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.navbar__list {
+  display: flex;
+}
+.header__action--login,
+.navbar__link {
+  padding: 8px 21px;
+  color: #c9d2da;
+  text-align: center;
+  font-size: 1.6rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 1.75;
+}
+.navbar__link:hover,
+.navbar__link--active {
+  color: #fff;
+  text-align: center;
+  font-size: 1.6rem;
+  font-style: normal;
+  text-shadow: 1px 0 0 currentColor;
+  line-height: 1.75;
+}
+.navbar__link--active::before {
+  position: relative;
+  top: -1px;
+  right: 8px;
+  content: "";
+  display: inline-block;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background-color: #fff;
+}
+.header__action--signup {
+  font-weight: 400;
+  font-size: 1.6rem;
+  min-width: 104px;
+  line-height: 44px;
+}
+.header__action--login{
+    margin-right: 7px;
 }
