--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,8 +34,8 @@ a {
   font-style: normal;
   font-weight: 400;
 }
-.btn:hover{
-    opacity: 0.9;
+.btn:hover {
+  opacity: 0.9;
 }
 /* header */
 
@@ -88,6 +88,70 @@ a {
   min-width: 104px;
   line-height: 44px;
 }
-.header__action--login{
-    margin-right: 7px;
+.header__action--login {
+  margin-right: 7px;
+}
+
+/* hero */
+.hero {
+  display: flex;
+  padding-top: 76px;
+  align-items: center;
+}
+.hero__content {
+  width: 44%;
+}
+.hero__media {
+  flex: 1;
+}
+.hero__heading {
+  color: #fff;
+  font-size: 7rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.14;
+  letter-spacing: -1.4px;
+}
+.hero__desc {
+  padding-top: 22px;
+  color: #c9d2da;
+  font-size: 1.8rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 1.66;
+}
+.hero__row {
+  display: flex;
+  align-items: center;
+  margin-top: 38px;
+}
+.hero__phone {
+  margin-left: 38px;
+  color: #fff;
+  text-align: center;
+  font-size: 1.8rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.67;
+}
+.hero__images {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.hero__img{
+    object-fit: cover;
+}
+.hero__img-large {
+  width: 330px;
+  height: 540px;
+  border-radius: 6px;
+  margin-right: -6px;
+  z-index: 1;
+}
+.hero__img-small {
+  width: 210px;
+  height: 410px;
+  border-radius: 0px 6px 6px 0px;
 }
