--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,23 @@ a {
 .btn:hover {
   opacity: 0.9;
 }
+.section-heading {
+  color: #10375c;
+  text-align: center;
+  font-size: 5rem;
+  font-weight: 600;
+  line-height: 1.2;
+  letter-spacing: -1px;
+}
+.section-desc {
+  margin-top: 18px;
+  color: #575f66;
+  text-align: center;
+  font-size: 1.8rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 1.67;
+}
 /* header */
 
 .header {
@@ -140,8 +157,8 @@ a {
   justify-content: flex-end;
 }
 
-.hero__img{
-    object-fit: cover;
+.hero__img {
+  object-fit: cover;
 }
 .hero__img-large {
   width: 330px;
@@ -154,4 +171,74 @@ a {
   width: 210px;
   height: 410px;
   border-radius: 0px 6px 6px 0px;
+}
+/* service */
+.service {
+  padding: 170px 0;
+  background: #fff;
+}
+.service__heading,
+.service__desc {
+  text-align: center;
+}
+.service__desc {
+  width: 468px;
+  margin: 0 auto;
+}
+.service__row {
+  display: flex;
+  margin-top: 70px;
+  justify-content: space-between;
+  align-items: center;
+}
+.service__img {
+  object-fit: cover;
+  width: 570px;
+  height: 570px;
+  border-radius: 12px;
+}
+.service-item {
+  padding: 21px;
+  display: flex;
+  width: 470px;
+  border-radius: 10px;
+  background: #fff;
+  transition: 0.5s;
+}
+.service-item:hover{
+  position: relative;
+  box-shadow: 0px 14px 28px 0px rgba(0, 0, 0, 0.08);
+}
+.service-item:hover .service-item__icon{
+  color: #fff;
+  background: #2E80CE;
+}
+.service-item__icon{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 60px;
+  height: 60px;
+  flex-shrink: 0;
+  margin-right: 19px;
+  border-radius: 30px;
+  background: #EFF6FD;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.05);
+  transition: 0.5s;
+}
+.service-item__heading {
+  color: #10375c;
+  font-size: 1.8rem;
+  font-weight: 600;
+}
+.service-item__desc {
+  margin-top: 8px;
+  width: 351px;
+  color: #575f66;
+  font-size: 1.6rem;
+  font-weight: 300;
+  line-height: 1.75;
+}
+.service__btn{
+  margin-top: 55px;
 }
