--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,6 @@ a {
 }
 .section-heading {
   color: #10375c;
-  text-align: center;
   font-size: 5rem;
   font-weight: 600;
   line-height: 1.2;
@@ -48,11 +47,36 @@ a {
 .section-desc {
   margin-top: 18px;
   color: #575f66;
-  text-align: center;
   font-size: 1.8rem;
   font-style: normal;
   font-weight: 300;
   line-height: 1.67;
+}
+/* control */
+.control {
+  display: flex;
+  column-gap: 18px;
+  align-items: center;
+}
+.control__btn {
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #575f66;
+  background-color: #fff;
+  cursor: pointer;
+  transition: 0.25s;
+}
+.control__btn:hover {
+  background: #2e80ce;
+  border-color: #2e80ce;
+  color: #fff;
+}
+.control-icon--next{
+  rotate: 180deg;
 }
 /* header */
 
@@ -183,7 +207,7 @@ a {
 }
 .service__desc {
   width: 468px;
-  margin: 0 auto;
+  margin: 18px auto 0;
 }
 .service__row {
   display: flex;
@@ -205,15 +229,16 @@ a {
   background: #fff;
   transition: 0.5s;
 }
-.service-item:hover{
+.service-item:hover {
   position: relative;
   box-shadow: 0px 14px 28px 0px rgba(0, 0, 0, 0.08);
+  cursor: pointer;
 }
-.service-item:hover .service-item__icon{
+.service-item:hover .service-item__icon {
   color: #fff;
-  background: #2E80CE;
+  background: #2e80ce;
 }
-.service-item__icon{
+.service-item__icon {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -222,7 +247,7 @@ a {
   flex-shrink: 0;
   margin-right: 19px;
   border-radius: 30px;
-  background: #EFF6FD;
+  background: #eff6fd;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.05);
   transition: 0.5s;
 }
@@ -239,6 +264,152 @@ a {
   font-weight: 300;
   line-height: 1.75;
 }
-.service__btn{
+.service__btn {
   margin-top: 55px;
+}
+/* work */
+.work {
+  padding: 100px 0;
+  background: #f6fbff;
+}
+.work__desc {
+  width: 468px;
+}
+.work__list {
+  margin-top: 86px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 30px;
+}
+.work-item {
+  padding: 43px;
+  border-radius: 4px;
+  background: #fff;
+  border: 16px solid #eaf6ff;
+}
+.work-item:hover {
+  border-color: #2e80ce;
+  transition: 0.5s;
+  transform: translateY(-16px);
+  cursor: pointer;
+}
+.work-item__heading {
+  margin-top: 18px;
+  color: #10375c;
+  font-size: 2.6rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.38;
+}
+.work-item__desc {
+  margin-top: 28px;
+  width: 254px;
+  color: #575f66;
+  font-size: 1.6rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 1.75;
+}
+.work-item__more {
+  margin-top: 18px;
+  display: inline-block;
+  color: #575f66;
+  font-size: 1.6rem;
+  font-weight: 300;
+  line-height: 1.75;
+}
+.work-item:hover .work-item__more {
+  color: #2e80ce;
+  font-size: 1.6rem;
+  line-height: 1.75;
+}
+/* about */
+.about {
+  margin-top: 85px;
+  padding: 85px 0 206px;
+}
+.about-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.about-media {
+  width: 49%;
+}
+.about-content {
+  width: 40%;
+}
+.about__img {
+  position: relative;
+}
+
+.about__img--big {
+  display: flex;
+  width: 512px;
+  height: 370px;
+  border-radius: 6px;
+  object-fit: cover;
+}
+.about__img--small {
+  position: absolute;
+  top: 99px;
+  left: 238px;
+  width: 332px;
+  height: 370px;
+  border-radius: 6px;
+  object-fit: cover;
+}
+.about-content__btn {
+  margin-top: 18px;
+}
+/* team */
+.team {
+  padding: 85px 0;
+}
+.team-header {
+  text-align: center;
+  margin: 0 auto;
+}
+.team__cta {
+  margin-top: 38px;
+}
+.team__list {
+  margin-top: 70px;
+  column-gap: 30px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+.team-item__thumb {
+  height: 290px;
+  min-width: 100%;
+  object-fit: cover;
+  display: block;
+  transition: 0.5s;
+}
+.team-item__img-bg {
+  border-radius: 6px;
+  background-color: #eaf6ff;
+  padding-top: 28px;
+  overflow: hidden;
+}
+.team-item:hover .team-item__thumb {
+  transform: scale(1.1);
+}
+.team-item__name {
+  margin-top: 12px;
+  color: #10375c;
+  text-align: center;
+  font-size: 1.6rem;
+  line-height: 1.75;
+}
+.team-item__desc {
+  color: #575f66;
+  text-align: center;
+  font-size: 1.4rem;
+  font-weight: 300;
+  line-height: 1.86;
+}
+.team__control {
+  margin-top: 38px;
+  justify-content: center;
 }
