--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,7 @@ a {
   border-color: #2e80ce;
   color: #fff;
 }
-.control-icon--next{
+.control-icon--next {
   rotate: 180deg;
 }
 /* header */
@@ -412,4 +412,48 @@ a {
 .team__control {
   margin-top: 38px;
   justify-content: center;
+}
+/* install */
+.install__inner {
+  margin-top: 170px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 70px;
+  height: 427px;
+  border-radius: 4px;
+  background: #2e80ce;
+}
+.install__img {
+  position: absolute;
+  bottom: 0;
+  width: 284px;
+  height: 522px;
+  object-fit: cover;
+}
+.install__content {
+  width: 586px;
+}
+.install__heading {
+  max-width: 489px;
+  color: #fff;
+  font-size: 5rem;
+  font-weight: 600;
+  line-height: 1.2;
+  letter-spacing: -1px;
+}
+.install__desc {
+  min-width: 586px;
+  margin-top: 18px;
+  color: #fff;
+  font-size: 1.8rem;
+  font-weight: 300;
+  line-height: 1.66;
+}
+.install__row {
+  margin-top: 38px;
+  display: flex;
+  gap: 28px;
+  align-items: center;
 }
