--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,13 @@ body {
 }
 
 /* common */
+input,
+select,
+textarea,
+button {
+  font-size: inherit;
+  font-family: inherit;
+}
 .container {
   width: 1170px;
   margin: 0 auto;
@@ -549,7 +556,7 @@ a {
 }
 /* appointment */
 .appointment {
-  margin: 170px 0;
+  margin-top: 170px;
 }
 .appointment__inner {
   padding: 100px 178px;
@@ -564,10 +571,117 @@ a {
   height: 2px;
   background: #2e80ce;
 }
-.appointment__desc{
+.appointment__desc {
   width: 617px;
   margin: 18px auto 0;
 }
 .appointment__btn {
   margin-top: 38px;
+}
+/* footer */
+.footer {
+  margin-top: 170px;
+  padding-top: 100px;
+  background: #10375c;
+  font-family: "Open Sans", sans-serif;
+}
+.footer__top {
+  display: grid;
+  grid-template-columns: 1fr 0.4fr 0.4fr 1fr;
+  column-gap: 78px;
+}
+.footer__desc {
+  margin-top: 22px;
+  width: 336px;
+  color: #a9b3bb;
+  font-size: 1.6rem;
+  line-height: 1.75;
+}
+.footer__heading {
+  color: #fff;
+  font-size: 1.6rem;
+  font-weight: 600;
+  line-height: 1.75;
+}
+.footer__list {
+  margin: 20px 0 28px;
+}
+.footer__link {
+  color: #a9b3bb;
+  font-size: 1.4rem;
+  line-height: 1.85;
+  white-space: nowrap;
+}
+.footer__link:hover {
+  text-decoration: underline;
+}
+.footer__item {
+  margin-bottom: 10px;
+}
+.footer__social {
+  display: flex;
+  margin-top: 20px;
+  column-gap: 10px;
+}
+.footer__social-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  background: #fff;
+  color: #2e80ce;
+  margin-bottom: 28px;
+  transition: 0.3s;
+}
+.footer__social-btn:hover {
+  background: #2e80ce;
+  color: #fff;
+}
+.footer-form {
+  margin-top: 10px;
+  display: flex;
+  gap: 12px;
+}
+.footer-form__input {
+  width: 212px;
+  height: 46px;
+  border-radius: 4px;
+  border: 1px solid #406181;
+  background-color: transparent;
+  outline: none;
+  color: #fff;
+}
+.footer-form__input::placeholder {
+  color: #9ca8b1;
+  font-size: 1.4rem;
+  font-style: normal;
+  line-height: 1.85;
+  padding: 10px;
+}
+.footer-form__submit {
+  width: 108px;
+  height: 46px;
+  border-radius: 4px;
+  border: none;
+  background: #2e80ce;
+  color: #fff;
+  font-size: 1.4rem;
+  font-weight: 600;
+  line-height: 1.85;
+}
+.footer-form__submit:hover {
+  opacity: 0.9;
+  cursor: pointer;
+}
+.footer__copyright {
+  border-top: 1px solid #406181;
+}
+.footer__copyright-text {
+  padding: 28px 0 42px;
+  color: #aab3ba;
+  font-size: 1.4rem;
+  text-align: center;
+  line-height: 1.85;
 }
