mobile responsive hero, service

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,6 +1,6 @@
 /* pc */
 @media (min-width: 992px) {
-  .mobile-header{
+  .mobile-header {
     display: none;
   }
 }
@@ -29,7 +29,7 @@
     cursor: pointer;
   }
   /* overlay */
-  .menu-overlay{
+  .menu-overlay {
     position: fixed;
     background-color: rgba(0, 0, 0, 0.3);
     inset: 0;
@@ -37,7 +37,7 @@
     opacity: 0;
     visibility: hidden;
   }
-  .menu-checkbox:checked ~ .menu-overlay{
+  .menu-checkbox:checked ~ .menu-overlay {
     opacity: 1;
     visibility: visible;
   }
@@ -83,6 +83,41 @@
   .navbar__link:hover {
     background-color: #00ffff37;
   }
+  /* hero */
+  .hero {
+    flex-direction: column;
+    row-gap: 50px;
+  }
+  .hero__content {
+    order: 2;
+  }
+  .hero__media {
+    order: 1;
+  }
+  .hero__content {
+    width: 75%;
+    text-align: center;
+    margin: 22px auto;
+  }
+  .hero__row {
+    justify-content: center;
+  }
+  /* service */
+  .service__row {
+    flex-direction: column;
+    row-gap: 30px;
+  }
+  .service__img {
+    width: 100%;
+  }
+  .service__list {
+    text-align: center;
+  }
+  .service-item {
+    width: 90%;
+    text-align: start;
+  }
+}
 /* tablet */
 @media (min-width: 768px) and (max-width: 991.98px) {
 }
@@ -91,7 +126,6 @@
 @media (min-width: 767.98px) {
 }
 /*  */
-.hero, .footer, main {
-    display: none;
-}
+.footer {
+  display: none;
 }
