--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -117,6 +117,30 @@
     width: 90%;
     text-align: start;
   }
+  /* work */
+  .work__list {
+    grid-template-columns: 1fr;
+    row-gap: 30px;
+  }
+  /* about */
+  .about-row {
+    flex-direction: column;
+    column-gap: 30px;
+  }
+  .about__media {
+    width: 100%;
+  }
+  .about__img--small{
+    display: none;
+  }
+  .about__img--big {
+    width: 100%;
+    height: auto;
+  }
+  .about-content{
+    width: 90%;
+    text-align: center;
+  }
 }
 /* tablet */
 @media (min-width: 768px) and (max-width: 991.98px) {
