--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -141,6 +141,23 @@
     width: 90%;
     text-align: center;
   }
+  /* team */
+  .team__list{
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 30px;
+  }
+  .team-item__thumb{
+    margin: 0 auto;
+    object-position: top;
+  } 
+  /* install */
+  .install__img {
+    display: none;
+  }
+  .install__content {
+    width: 90%;
+    margin: 0 auto;
+  }
 }
 /* tablet */
 @media (min-width: 768px) and (max-width: 991.98px) {
